# bars

./: .gitignore  Cargo.toml  README.md
benches/: benches.rs
docs/: Information_driven_bars.md
examples/: example.rs
src/: bars.rs  information_driven.rs  lib.rs  main.rs  types.rs
tests/: integration_test.rs  test_length.rs
utils/: afml_labeling_modeling.ipynb  afml_modeling.py  aggtrades_zscore_return.ipynb  data_analysis.ipynb
