[package]
name = "Bars"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
ndarray = "0.17.2"
clap = { version = "4.6", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "benches"
harness = false
